--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "argentbank",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.6.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.19.0"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
